--- a/html.html
+++ b/html.html
@@ -9,10 +9,10 @@
 <nav>
 <table border="5" height="50"width="100%">
 <tr>
-<th><a href="file:///C:/Users/dell/Desktop/trabajo/trabajo%20en%20casa2.html"><font color="white">Inicio</font></a> </th>
-<th> <a href="file:///C:/Users/dell/Desktop/trabajo/html.html"><font color="white">HTML</font></a></th>
+<th><a href="trabajo en casa2.html"><font color="white">Inicio</font></a> </th>
+<th> <a href="html.html"><font color="white">HTML</font></a></th>
 
-<th><a href="file:///C:/Users/dell/Desktop/trabajo/para%20que%20sirve%20css.html"><font color="white">CSS</font></a> </th>
+<th><a href="para que sirve css.html"><font color="white">CSS</font></a> </th>
 
 </tr>
 </table>
